[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/cat_food_example.png" type="Texture" id=1]
[ext_resource path="res://assets/images/triangle_64x64.png" type="Texture" id=2]
[ext_resource path="res://prefab_scenes/CatFoodSpawner/CatFoodSpawner.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 30.3694

[node name="CatFoodSpawner" type="Node2D" groups=[
"Resetable",
"ShouldLaunch",
]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )
width = 5.0
default_color = Color( 0.392157, 0.392157, 1, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ArrowSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.392157, 0.392157, 1, 1 )
position = Vector2( -50, 0 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
visible = false
position = Vector2( 0, -0.140306 )
shape = SubResource( 1 )

[node name="BallSpawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="BallLaunchTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="BallSpawn" type="Node2D" parent="."]

[node name="Labels" type="Node2D" parent="."]
z_index = 2

[node name="Label" type="Label" parent="Labels"]
visible = false
modulate = Color( 0.109804, 1, 0, 1 )
margin_left = -20.2679
margin_top = -6.45901
margin_right = 19.7321
margin_bottom = 24.541
text = "1
"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="InteractionArea" to="." method="_on_InteractionArea_input_event"]
[connection signal="mouse_entered" from="InteractionArea" to="." method="_on_InteractionArea_mouse_entered"]
[connection signal="mouse_exited" from="InteractionArea" to="." method="_on_InteractionArea_mouse_exited"]
[connection signal="timeout" from="BallSpawnTimer" to="." method="_on_BallSpawnTimer_timeout"]
[connection signal="timeout" from="BallLaunchTimer" to="." method="_on_BallLaunchTimer_timeout"]
